...
  }

  void pressedButton(String button) {
    List<String> result = buttonPad.pressedButton(button, userQuestion, userAnswer);
    setState(() {
      userQuestion = result[0];
      userAnswer = result[1];
    });
  }

  void _openSettingsMenu() {
    showDialog(
      context: context,
...
